<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elegantTextHeight="true"
            android:elevation="20dp"

            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilerg0"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:src="@drawable/ic_menu_camera" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/usernameCapitals"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/rgusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/usernameTitle"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:text=""
            android:maxLength="14"
            android:autofillHints="" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:text="@string/emailCapitals"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/rgemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emailNormal"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:text="PASSWORD"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/rgpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="14sp"
            />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="RE-ENTER PASSWORD"
            android:textColor="@color/black"
            android:textSize="16sp"

            />


        <EditText
            android:id="@+id/rgrepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/cityTV"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="CITY"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"/>


        <EditText
            android:id="@+id/cityTVRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="City"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/professionTV"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="Profession"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"/>


        <EditText
            android:id="@+id/professionTVRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/cityTV"
            android:ems="10"
            android:hint="Profession"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/countryTV"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="COUNTRY"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_width="match_parent"/>


        <EditText
            android:id="@+id/countryETRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Country"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="14sp"
            />



        <Button
            android:id="@+id/signupbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textStyle="bold"


            />
    </LinearLayout>



    <TextView
        android:id="@+id/loginbut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"


        />

</RelativeLayout>