<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="20dp"
        android:elevation="10dp"
        android:id="@+id/postCard"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/topLayout">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_add_location_24"
                    android:backgroundTint="@color/black"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/uploadEvent">

                </ImageView>

                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Category"
                    android:gravity="start"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/eventTitle"
                    android:textSize="16sp"
                    android:id="@+id/eventCategory" />

                <TextView
                    android:id="@+id/eventTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="start"
                    android:hint="Title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hours_ago"
                    android:gravity="end"
                    android:layout_below="@id/eventCategory"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/eventDate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/post_description"
                    android:layout_below="@id/eventCategory"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="90dp"
                    android:layout_marginStart="10dp"
                    android:id="@+id/eventDescription"
                    android:gravity="end"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/topLayout">

                <ImageView
                    android:id="@+id/postImage"
                    android:longClickable="true"
                   
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/baseline_image_24"
                    android:contentDescription="@string/post_image"
                    android:focusable="true" />


                    <androidx.core.widget.NestedScrollView
                        android:layout_alignParentTop="true"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_green"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:id="@+id/menu_recognize_text">

                        </TextView>
                    </androidx.core.widget.NestedScrollView>






            </RelativeLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>